--- a/career.html
+++ b/career.html
@@ -22,7 +22,7 @@
 
   <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
-      <a href="/index.html" class="brand w-nav-brand w--current">
+      <a href="https://yashbharadva.github.io/stryve/" class="brand w-nav-brand w--current">
         <div class="html-embed-3 w-embed"><svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none"
             xmlns="http://www.w3.org/2000/svg" class=" drawsvg-initialized">
 
