--- a/B-Corp.html
+++ b/B-Corp.html
@@ -23,7 +23,7 @@
 
   <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
-      <a href="https://yashbharadva.github.io/stryve/" class="brand w-nav-brand w--current">
+      <a href="index.html" class="brand w-nav-brand w--current">
         <div class="html-embed-3 w-embed"><svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none"
             xmlns="http://www.w3.org/2000/svg" class=" drawsvg-initialized">
 
@@ -1083,9 +1083,9 @@
 
         <div class="c-slider__container">
           <div
-            class="swiper-container testimonials w-dyn-list swiper-container-initialized swiper-container-horizontal swiper-container-pointer-events swiper-container-free-mode"
+            class="swiper-container testimonials w-dyn-list swiper-container-initialized swiper-container-horizontal swiper-container-free-mode swiper-container-android"
             style="cursor: grab;">
-            <div class="swiper-wrapper w-dyn-items">
+            <div class="swiper-wrapper w-dyn-items swiper-slide-active">
 
               <!-- FIRST CUSTOMER -->
 
@@ -1116,17 +1116,25 @@
                     </div>
                   </div>
 
-                  <a href="#" class="c-btn cc-beige cc-with-play cc-absolute w-inline-block"
-                    style="opacity: 0; height: 48px; width: 0px;">
+                  <!-- <a href="#" class="sm-ellipse w-inline-block">
+                    <img class="c-icon__red-arrow"
+                      src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbfda4a0a065e_Vector%209.svg">
+                  </a> -->
+
+                  <a href="Katharine-Archer.html" class="c-btn cc-beige cc-with-play cc-absolute w-inline-block"
+                    style="opacity: 1; height: 48px;">
                     <div class="c-play__iocn-holder cc-hide">
                       <img
                         src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbfda4a0a065e_Vector%209.svg"
                         alt="arrow-red" class="c-icon__red-arrow">
                     </div>
 
-                    <div class="p-right__3 cc-hide">Hear </div>
-                    <div>Read more</div>
-                    <div class="p-right__3 cc-hide">'s</div>
+                    <div class="flex mg-left__8" style="opacity: 1; display: flex;">
+                      <div class="p-right__3 cc-hide">Hear </div>
+                      <div>Read more</div>
+                      <div class="p-right__3 cc-hide">'s</div>
+                    </div>
+
                   </a>
 
                 </div>
@@ -1160,17 +1168,19 @@
                     </div>
                   </div>
 
-                  <a href="#" class="c-btn cc-beige cc-with-play cc-absolute w-inline-block"
-                    style="opacity: 0; height: 48px; width: 0px;">
+                  <a href="Richard-Angle.html" class="c-btn cc-beige cc-with-play cc-absolute w-inline-block"
+                    style="opacity: 1; height: 48px;">
                     <div class="c-play__iocn-holder cc-hide">
                       <img
                         src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbfda4a0a065e_Vector%209.svg"
                         alt="arrow-red" class="c-icon__red-arrow">
                     </div>
 
-                    <div class="p-right__3 cc-hide">Hear </div>
-                    <div>Read more</div>
-                    <div class="p-right__3 cc-hide">'s</div>
+                    <div class="flex mg-left__8" style="opacity: 1; display: flex;">
+                      <div class="p-right__3 cc-hide">Hear </div>
+                      <div>Read more</div>
+                      <div class="p-right__3 cc-hide">'s</div>
+                    </div>
                   </a>
 
                 </div>
