--- a/Alex-Rook.html
+++ b/Alex-Rook.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/Homepage/main.css" />
   <link rel="stylesheet" href="css/Alex-Rook/Alex-Rook.css" />
+  <link rel="stylesheet" href="css/Homepage/responsive.css" />
   <title>Alex Rook</title>
 </head>
 
