Complete the website with the animation too.

--- a/remain.html
+++ b/remain.html
@@ -370,8 +370,8 @@
                     src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf10e20a06cb_Vector%2014.svg"
                     alt="" class="c-nav__arrow-svg cc-hover">
                 </a></div>
-              <div class="c-nav-middle__flex-holder cc-turquoise" onclick="myFunction()">
-                <a data-w-id="76cb24e1-63ba-aed2-336b-0b764f7be43c" target="_blank"
+              <div class="c-nav-middle__flex-holder cc-turquoise">
+                <a data-w-id="76cb24e1-63ba-aed2-336b-0b764f7be43c" href="raiseTicket.html"
                   class="c-nav__flex-item mg-btm__8 cc-green-hover w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0" rel="noopener noreferrer">
@@ -381,12 +381,7 @@
                 </a>
               </div>
 
-              <script>
 
-                function myFunction() {
-                  window.open("raiseTicket.html")
-                }
-              </script>
 
             </div>
             <div class="c-nav-drop__right-item resources"><a href="resource.html"
