--- a/improve.html
+++ b/improve.html
@@ -447,32 +447,17 @@
 
         </div>
         <div class="nav-line__separator"></div>
-        <a href="#" target="_blank" class="w-nav-link" onclick="bookdemo()">Book a Demo</a>
+        <a href="bookdemo.html" class="w-nav-link">Book a Demo</a>
 
-        <script>
-          function bookdemo() {
-            window.open("bookdemo.html")
-            console.log("You click on book a demo part.")
-          }
-        </script>
 
-        <a href="#" target="_blank" class="w-nav-link" onclick="signup()">Sign up</a>
 
-        <script>
-          function signup() {
-            window.open("signup.html")
-            console.log("You clicked on sign up page")
-          }
-        </script>
+        <a href="signup.html" class="w-nav-link">Sign up</a>
 
-        <a href="#" class="c-bg__white w-nav-link" onclick="login()">Log in</a>
 
-        <script>
-          function login() {
-            window.open("login.html")
-            console.log("You clicked on sign up page")
-          }
-        </script>
+
+        <a href="login.html" class="c-bg__white w-nav-link">Log in</a>
+
+     
       </nav>
 
 
